--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index File</title>
-    <link rel="stylesheet" href="Index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="Index.css" />
+  </head>
+  <body>
     <h1>This is my heading.</h1>
-</body>
+    <h3>Sagar</h3>
+  </body>
 </html>
