--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index File</title>
-    <link rel="stylesheet" href="Index.css" />
-  </head>
-  <body>
-    <h1>This is my heading.</h1>
-    <h3>Sagar</h3>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Operators,Conditional statement and Loops,Functions</title>
+</head>
+<body>
+    <h1>Operators in JS</h1>
+    <script src="Conditionals.js"></script>
+</body>
 </html>
